# pp-hu-re-scraper

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: build.yml  publish.yml
datasources/: cleaner.py  ksh.py  mnb.py
generators/: interpolation.py  ksh.py  mnb.py
models/: ksh.py  mnb.py  pp.py
pipeline/: group.py  identity.py  interpolation.py  json.py  mnb.py
tests/generators/: test_interpolation.py
