[project]
name = "pp-hu-re-scraper"
version = "0.1.0"
description = "Portfolio Performance compatible scraper for Hungarian real estate prices"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chompjs>=1.4.1",
    "openpyxl>=3.1.5",
    "orjson>=3.11.9",
    "pandas>=3.0.3",
    "pandera[pandas]>=0.31.1",
    "python-slugify>=8.0.4",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "tqdm>=4.68.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.17",
    "viztracer>=1.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
